--- a/static/style.css
+++ b/static/style.css
@@ -29,6 +29,7 @@ ul {
     flex-direction: column;
     list-style-type: none;
     padding-inline-start: 0;
+    user-select: none;
 }
 
 li:before {
@@ -76,6 +77,7 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: center;
+    user-select: none;
 }
 
 a {
