--- a/static/style.css
+++ b/static/style.css
@@ -42,6 +42,7 @@ li {
     display: inline-flex;
     align-items: center;
     transition: padding-left 1s cubic-bezier(0, 0, 0.45, 1.53);
+    cursor: pointer;
 }
 
 li:hover {
