--- a/static/style.css
+++ b/static/style.css
@@ -89,6 +89,7 @@ footer {
     font-family: Roboto, times, "Helvetica Neue", helvetica, arial, sans-serif;
     text-transform: uppercase;
     font-size: 13px;
+    padding-bottom: 20px;
 }
 
 body[nofooter] footer {
