--- a/static/host.css
+++ b/static/host.css
@@ -10,7 +10,7 @@ body {
     left: 0;
     top: 0;
     width: 100vw;
-    height; 100vh;
+    height: 100vh;
     overflow: hidden;
     font-family: helvetica, arial, sans-serif;
 }
