--- a/static/host.css
+++ b/static/host.css
@@ -3,8 +3,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    background-color: black;
-    color: white;
+    background-color: #232221;
+    color: #CFEFF4;
     margin: 0;
     position: absolute;
     left: 0;
@@ -21,6 +21,7 @@ form {
     transition: width 1s linear 0s, height 1s linear 0s, padding 1s linear 0s;
     padding: 15px;
     overflow: hidden;
+    background-color: #2b2d2d;
 }
 
 form section + section {
