--- a/static/host.css
+++ b/static/host.css
@@ -70,4 +70,10 @@ input[type="submit"] {
     font-weight: bold;
     padding: 4px 14px;
     min-height: 34px;
+    transition: background-color 0.2s ease;
+}
+
+input[type="submit"]:hover {
+    background-color: #0058ff;
+    border: #222025;
 }
