--- a/static/host.css
+++ b/static/host.css
@@ -1,9 +1,9 @@
 body {
-    display: flex;
+    display: flex !important;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    background-color: #232221 !important;
+    background-color: #232221;
     color: #E2EFF4;
     margin: 0;
     position: absolute;
