--- a/static/specific.css
+++ b/static/specific.css
@@ -31,5 +31,16 @@ body {
 }
 .input {
     grid-area: input;
-    background-color: blue;
+    background-color: #222025;
+    border: 1px solid #344444;
+    color: currentColor;
+    border-radius: 5px;
+    line-height: 1;
+    padding: 0 7px;
+    vertical-align: middle;
+}
+
+.input[type="text"]:focus {
+    outline: none;
+    border: 1px solid #0083ff;
 }
