--- a/templates/specificgame.html
+++ b/templates/specificgame.html
@@ -40,6 +40,6 @@
         <div class='players'></div>
         <div class='chat'></div>
         <div class='setup'></div>
-        <div class='input'></div>
+        <input class='input' type='text' />
     </body>
 </html>
