--- a/templates/specificgame.html
+++ b/templates/specificgame.html
@@ -40,6 +40,8 @@
         <div class='players'></div>
         <div class='chat'></div>
         <div class='setup'></div>
-        <input class='input' type='text' />
+        <div class='input'>
+            <input type='text' />
+        </div>
     </body>
 </html>
