--- a/templates/specificgame.html
+++ b/templates/specificgame.html
@@ -40,8 +40,9 @@
         <div class='players'></div>
         <div class='chat'></div>
         <div class='setup'></div>
-        <div class='input'>
+        <form class='input'>
             <input type='text' />
-        </div>
+            <input type='submit' value='Send' />
+        </form>
     </body>
 </html>
