--- a/static/specific.css
+++ b/static/specific.css
@@ -19,19 +19,19 @@ body {
 
 .players {
     grid-area: players;
-    background-color: red;
+    background-color: #2c2a31;
 }
 .setup {
     grid-area: setup;
-    background-color: green;
+    background-color: #2c2a31;
 }
 .chat {
     grid-area: chat;
-    background-color: yellow;
+    background-color: #222025;
 }
 .input {
     grid-area: input;
-    background-color: #111121;
+    background-color: #2c2a31;
     display: flex;
     justify-content: center;
     align-content: center;
