--- a/static/specific.css
+++ b/static/specific.css
@@ -20,10 +20,12 @@ body {
 .players {
     grid-area: players;
     background-color: #2c2a31;
+    border-right: 1px solid #161418;
 }
 .setup {
     grid-area: setup;
     background-color: #2c2a31;
+    border-left: 1px solid #161418;
 }
 .chat {
     grid-area: chat;
