--- a/static/specific.css
+++ b/static/specific.css
@@ -24,9 +24,10 @@ message {
 }
 
 time {
-    margin-right: 7px;
-    color: #4c4a52;
-    white-space: nowrap;
+    margin-right: 0.5rem;
+    color: #444e52;
+    vertical-align: middle;
+    font-size: x-small;
 }
 
 name {
@@ -53,6 +54,7 @@ name {
 .chat {
     grid-area: chat;
     background-color: #222025;
+    overflow-y: scroll;
 }
 .input {
     grid-area: input;
