--- a/templates/specificgame.html
+++ b/templates/specificgame.html
@@ -23,7 +23,7 @@
         <meta name='DC.Description' content='Join a game of heavily customized mafia!' />
         <meta name='DC.Format' content='text/html' />
         <meta name='DC.Language' content='en' />
-        <meta name='twitter:card' content='summar_large_image' />
+        <meta name='twitter:card' content='summary_large_image' />
         <meta name='twitter:creator' content='@oderjunks' />
         <meta name='description' content='Join a game of heavily customized mafia!' />
         <meta name='keywords' content='mafia,online gaming,game' />
