--- a/static/specific.css
+++ b/static/specific.css
@@ -65,6 +65,7 @@ name {
     align-items: stretch;
     flex-direction: row;
     padding: 7px;
+    border: 5px;
 }
 
 .players[off] { transform: translateX(-100%) }
@@ -81,7 +82,7 @@ input[type="text"] {
     background-color: #222025;
     border: 1px solid #344444;
     color: currentColor;
-    border-radius: 5px;
+    /*border-radius: 5px;*/
     line-height: 1;
     padding: 0 7px;
     vertical-align: middle;
@@ -104,7 +105,7 @@ input[type="submit"][disabled] {
 input[type="submit"] {
     background-color: #ff5722;
     border: #222025;
-    border-radius: 5px;
+    /*border-radius: 5px;*/
     box-shadow: inset 0px 0px 9px 6px #ffffff33, inset 0px 1px 6px 11px #00000026;
     color: #e5e3e7;
     cursor: pointer;
