--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@ body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    font-family: helvetica, arial, sans-serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 aside {
