--- a/static/host.css
+++ b/static/host.css
@@ -12,7 +12,7 @@ body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    font-family: "Roboto", times, "Helvetica Neue", helvetica, arial, sans-serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 form {
