--- a/static/specific.css
+++ b/static/specific.css
@@ -11,11 +11,13 @@ body {
     overflow: hidden;
     font-family: 'Titillium Web', sans-serif;
     font-size: 14px;
-    grid-template-columns: 14rem auto 16rem;
+    grid-template-columns: /*14rem*/ auto 16rem;
     grid-template-rows: auto 2.7rem;
     grid-template-areas:
-        'players chat setup'
-        'players input setup';
+        /*'players chat setup'
+        'players input setup'*/
+        'chat setup'
+        'input setup';
 }
 
 message {
@@ -37,15 +39,15 @@ name {
     font-weight: bold;
 }
 
-.players, .setup, .chat, .input {
+/*.players, */.setup, .chat, .input {
     transition: transform 1s cubic-bezier(0.75, 0, 0.25, 1);
 }
 
-.players {
+/*.players {
     grid-area: players;
     background-color: #2c2a31;
     border-right: 1px solid #161418;
-}
+}*/
 .setup {
     grid-area: setup;
     background-color: #2c2a31;
@@ -100,7 +102,7 @@ input[type="text"]:focus {
 input[type="submit"][disabled] {
     background-color: #252525;
     color: #828282;
-    box-shadow: inset 0px 0px 9px 6px #ababab33, inset 0px 1px 6px 11px #00000026;
+    box-shadow: inset 0px 0px 0px 3px #ababab24;
     cursor: default;
 }
 
@@ -108,7 +110,7 @@ input[type="submit"] {
     background-color: #ff5722;
     border: #222025;
     /*border-radius: 5px;*/
-    box-shadow: inset 0px 0px 9px 6px #ffffff33, inset 0px 1px 6px 11px #00000026;
+    box-shadow: inset 0px 0px 0px 3px #ffffff33;
     color: #e5e3e7;
     cursor: pointer;
     font-weight: bold;
