--- a/static/specific.css
+++ b/static/specific.css
@@ -11,6 +11,7 @@ body {
     overflow: hidden;
     font-family: 'Titillium Web', sans-serif;
     font-size: 14px;
+    line-height: 13px;
     grid-template-columns: /*14rem*/ auto 16rem;
     grid-template-rows: auto 2.7rem;
     grid-template-areas:
