--- a/static/host.css
+++ b/static/host.css
@@ -1,3 +1,8 @@
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     display: flex !important;
     flex-direction: column;
@@ -9,8 +14,8 @@ body {
     position: absolute;
     left: 0;
     top: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     font-family: 'Titillium Web', sans-serif;
 }
