--- a/static/specific.css
+++ b/static/specific.css
@@ -1,3 +1,8 @@
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     display: grid !important;
     background-color: #232221;
@@ -6,8 +11,8 @@ body {
     position: absolute;
     left: 0;
     top: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     font-family: 'Titillium Web', sans-serif;
     font-size: 14px;
