--- a/static/play.css
+++ b/static/play.css
@@ -1,16 +1,28 @@
 body {
     display: flex !important;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 form {
-    display: block;
-    padding: 20px;
+    display: flex;
+    padding: 10px;
+    color: white;
+    background-color: #414141;
+    border: 1px solid #555;
+}
+
+form + form {
+    margin-top: 10px;
+}
+
+form name {
+    align-items: center;
+    flex-grow: 1;
 }
 
 input[type="submit"] {
     background-color: #ff5722;
     border: #222025;
-    /*border-radius: 5px;*/
     box-shadow: inset 0px 0px 0px 3px #ffffff33;
     color: #e5e3e7;
     cursor: pointer;
@@ -18,7 +30,6 @@ input[type="submit"] {
     padding: 4px 14px;
     min-height: 34px;
     transition: background-color 0.2s ease;
-    float: right;
 }
 
 input[type="submit"]:hover {
