--- a/static/play.css
+++ b/static/play.css
@@ -3,6 +3,7 @@ body {
     font-family: 'Titillium Web', sans-serif;
     margin-top: 10px;
     background-color: #232221;
+    flex-direction: column;
 }
 
 form {
