--- a/static/style.css
+++ b/static/style.css
@@ -28,6 +28,9 @@ aside {
 aside img {
     transition: transform 1s cubic-bezier(0.57, -0.59, 0.45, 1.53) 0s;
     transform: translateY(0%);
+    aspect-ratio: 7/3;
+    max-width: 700px;
+    min-width: 0;
 }
 
 ul {
@@ -104,4 +107,11 @@ body[nofooter] footer {
 a {
     text-decoration: none;
     color: white;
+    height: 100%
+}
+
+figure {
+    margin-block-end: 0;
+    margin-block-start: 0;
+    height: 100%;
 }
