--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,7 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     font-family: 'Titillium Web', sans-serif;
 }
 
