--- a/templates/specificgame.html
+++ b/templates/specificgame.html
@@ -41,7 +41,14 @@
     <body>
         <!--div class='players'></div-->
         <div class='chat'></div>
-        <div class='setup'></div>
+        <div class='details'>
+            <h1>Day 1</h1>
+            <form>
+                <input type='submit' value='Player up' />
+                <input type='submit' value='Edit Game logic' />
+                <input type='submit' value='Start game' />
+            </form>
+        </div>
         <form class='input'>
             <input type='submit' value='Speak' disabled />
             <input type='text' />
