--- a/static/specific.css
+++ b/static/specific.css
@@ -1,6 +1,8 @@
 @font-face {
     font-family: 'Disposable Droid BB';
-    src: url('/ddroid.ttf') font('ttf')
+    src: url('/ddroid.ttf') font('truetype'),
+         url('/ddroid.woff') font('woff'),
+         url('/ddroid.woff2') font('woff2');
 }
 
 html {
