--- a/static/specific.css
+++ b/static/specific.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: "Disposable Droid BB";
-    src: url(https://mafia-redux.herokuapp.com/ddroid.ttf) font("truetype"),
-         url(https://mafia-redux.herokuapp.com/ddroid.woff) font("woff"),
-         url(https://mafia-redux.herokuapp.com/ddroid.woff2) font("woff2");
+    src: url(ddroid.woff) font("woff"),
+         url(ddroid.woff2) font("woff2"),
+         url(ddroid.ttf) font("truetype");
 }
 
 /*@font-face {
