--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang='en' prefix='https://ogp.me/ns/website#'>
     <head>
-        <title>Yet Another Mafia Redux</title>
+        <title>{% block title %}Yet Another Mafia Redux{% endblock %}</title>
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width, user-scalable=no'>
-        <meta property='og:title' content='Join other people in a game of heavily customizable mafia!' />
-        <meta property='og:description content='Join other people in a game of heavily customizable mafia!' />
+        <meta property='og:title' content='{% block desc %}Join other people in a game of heavily customizable mafia!{% endblock %}' />
+        <meta property='og:description content='{% block desc %}Join other people in a game of heavily customizable mafia!{% endblock %}' />
         <meta property='og:type' content='website' />
         <meta property='og:url' content='https://mafia-redux.herokuapp.com/' />
         <meta property='og:image:url' content='https://via.placeholder.com/128x128.png' />
@@ -16,52 +16,30 @@
         <meta property='og:image:alt' content='128x128' />
         <meta property='og:determiner' content='' />
         <meta property='og:locale' content='en_US' />
-        <meta property='og:site_name' content='Yet Another Mafia Redux' />
-        <meta name='DC.Title' content='Yet Another Mafia Redux' />
+        <meta property='og:site_name' content='{% block title %}Yet Another Mafia Redux{% endblock %}' />
+        <meta name='DC.Title' content='{% block title %}Yet Another Mafia Redux{% endblock %}' />
         <meta name='DC.Creator' content='Otesunki' />
         <meta name='DC.Subject' content='Mafia' />
-        <meta name='DC.Description' content='Join other people in a game of heavily customizable mafia!' />
+        <meta name='DC.Description' content='{% block desc %}Join other people in a game of heavily customizable mafia!{% endblock %}' />
         <meta name='DC.Format' content='text/html' />
         <meta name='DC.Language' content='en' />
         <meta name='twitter:card' content='summary' />
         <meta name='twitter:creator' content='@oderjunks' />
-        <meta name='description' content='Join other people in a game of heavily customizable mafia!' />
+        <meta name='description' content='{% block desc %}Join other people in a game of heavily customizable mafia!{% endblock %}' />
         <meta name='keywords' content='mafia,online gaming,game' />
-        <meta name='robots' content='index,follow' />
-        <meta name="google-site-verification" content="k7rotCgJA1r3Wg2RU2sctxvobGeQ27oRNnSPN2HUuCk" />
+        <meta name='robots' content='noindex,nofollow' />
+        <meta name='session' content='{{ request.cookies.get('usertoken') }}' />
         <link rel='shortcut icon' type='image/x-icon' href='https://via.placeholder.com/32x32.ico'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel='stylesheet' type='text/css' href='/style.css' />
+        <link rel='stylesheet' type='text/css' href='{% block css %}{% endblock %}' />
         <script defer src='/jquery-3.6.0.min.js'></script>
         <script async src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js' integrity='sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==' crossorigin='anonymous'></script>
         <script defer src='/global.js'></script>
-        <script defer src='/script.js'></script>
+        <script defer src='{% block js %}{% endblock %}'></script>
     </head>
-    <body footer>
-        <aside>
-            <img src='https://via.placeholder.com/700x300.png'/>
-        </aside>
-        <ul>
-            <li class='login'><span>Login</span></li>
-            <li class='play'><span>Play</span></li>
-            <li class='host'><span>Host</span></li>
-            <li class='about'><span>About</span></li>
-        </ul>
-        <footer>
-            <a href='#'>
-                <figure>
-                <img src='https://via.placeholder.com/64x64.png'/>
-                <figcaption>News</figcaption>
-                </figure>
-            </a>
-            <a href='#'>
-                <figure>
-                <img src='https://via.placeholder.com/64x64.png'/>
-                <figcaption>Discord</figcaption>
-                </figure>
-            </a>
-        </footer>
+    <body {% block bodyattr %}{% endblock %}>
+        {% block body %}{% endblock %}
     </body>
 </html>
