--- a/templates/specificgame.html
+++ b/templates/specificgame.html
@@ -1,44 +1,8 @@
-<!DOCTYPE html>
-<html lang='en' prefix='https://ogp.me/ns/website#'>
-    <head>
-        <title>Yet Another Mafia Redux</title>
-        <meta charset='utf-8'>
-        <meta name='viewport' content='width=device-width, user-scalable=no'>
-        <meta property='og:title' content='Join a game of heavily customized mafia!' />
-        <meta property='og:description content='Join a game of heavily customized mafia!' />
-        <meta property='og:type' content='website' />
-        <meta property='og:url' content='https://mafia-redux.herokuapp.com/' />
-        <meta property='og:image:url' content='https://via.placeholder.com/128x128.png' />
-        <meta property='og:image:secure_url' content='https://via.placeholder.com/128x128.png' />
-        <meta property='og:image:type' content='image/png' />
-        <meta property='og:image:width' content='128' />
-        <meta property='og:image:height' content='128' />
-        <meta property='og:image:alt' content='128x128' />
-        <meta property='og:determiner' content='' />
-        <meta property='og:locale' content='en_US' />
-        <meta property='og:site_name' content='Yet Another Mafia Redux' />
-        <meta name='DC.Title' content='Yet Another Mafia Redux' />
-        <meta name='DC.Creator' content='Otesunki' />
-        <meta name='DC.Subject' content='Mafia' />
-        <meta name='DC.Description' content='Join a game of heavily customized mafia!' />
-        <meta name='DC.Format' content='text/html' />
-        <meta name='DC.Language' content='en' />
-        <meta name='twitter:card' content='summary' />
-        <meta name='twitter:creator' content='@oderjunks' />
-        <meta name='description' content='Join a game of heavily customized mafia!' />
-        <meta name='keywords' content='mafia,online gaming,game' />
-        <meta name='robots' content='noindex,nofollow' />
-        <meta name='session' content='{{ request.cookies.get('usertoken') }}' />
-        <link rel='shortcut icon' type='image/x-icon' href='https://via.placeholder.com/32x32.ico'>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel='stylesheet' type='text/css' href='/specific.css' />
-        <script defer src='/jquery-3.6.0.min.js'></script>
-        <script async src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js' integrity='sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==' crossorigin='anonymous'></script>
-        <script defer src='/specific.js'></script>
-    </head>
-    <body>
+{% extends 'base.html' %}
+{% block desc %}Join a game of heavily customized mafia!{% endblock %}
+{% block js %}/specific.js{% endblock %}
+{% block css %}/specific.css{% endblock %}
+{% block body %}
         <!--div class='players'></div-->
         <div class='chat'></div>
         <div class='details'>
@@ -53,5 +17,4 @@
             <input type='submit' value='Speak' disabled />
             <input type='text' />
         </form>
-    </body>
-</html>
+{% endblock %}
