--- a/static/sass/host.scss
+++ b/static/sass/host.scss
@@ -1,3 +1,14 @@
+$backgroundcolor: #232221;
+$textcolor: #E2EFF4;
+
+$textinputbackground: #222025;
+$textinputborder: #344444;
+
+$formbackground: #2b2d2d;
+$formborder: #FFF;
+
+$errorbackground: #ff0000;
+
 html {
     width: 100%;
     height: 100%;
@@ -8,8 +19,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    background-color: #232221;
-    color: #E2EFF4;
+    background-color: $backgroundcolor;
+    color: $textcolor;
     margin: 0;
     position: absolute;
     left: 0;
@@ -22,15 +33,18 @@ body {
 
 form {
     display: none;
-    border: 1px solid white;
-    transition: width 0.2s linear 0.2s, height 0.2s linear 0s, padding 0.2s linear 0s;
+    border: 1px solid $formborder;
+    transition: width 0.2s linear 0s,
+                height 0.2s linear 0s,
+                padding 0.2s linear 0s;
     padding: 15px;
     overflow: hidden;
-    background-color: #2b2d2d;
-}
-
-form section + section {
-    margin-top: 15px;
+    background-color: $formbackground;
+    section {
+        & + & {
+            margin-top: 15px;
+        }
+    }
 }
 
 flex {
@@ -49,46 +63,30 @@ label {
     margin-bottom: 3px;
 }
 
-input[type="checkbox"][checked] {
-    filter: hue-rotate(165deg);
-}
+@import 'submits';
 
-input[type="text"], input[type="password"] {
-    min-height: 34px;
-    background-color: #222025;
-    border: 1px solid #344444;
-    color: currentColor;
-    border-radius: 5px;
-    line-height: 1;
-    padding: 0 7px;
-    vertical-align: middle;
-    flex-grow: 1;
-}
-
-input[type="text"]:focus, input[type="password"]:focus {
-    outline: none;
-    border: 1px solid #ff5722;
-}
-
-input[type="submit"] {
-    background-color: #ff5722;
-    border: #222025;
-    /*border-radius: 5px;*/
-    box-shadow: inset 0px 0px 0px 3px #ffffff33;
-    color: #e5e3e7;
-    cursor: pointer;
-    font-weight: bold;
-    padding: 4px 14px;
-    min-height: 34px;
-    transition: background-color 0.2s ease;
-}
-
-input[type="submit"]:hover {
-    background-color: #f44336;
-    border: #222025;
+input {
+    &[type="text"], &[type="password"] {
+        min-height: 34px;
+        background-color: $textinputbackground;
+        border: 1px solid $textinputborder;
+        color: currentColor;
+        border-radius: 5px;
+        line-height: 1;
+        padding: 0 7px;
+        vertical-align: middle;
+        flex-grow: 1;
+        &:focus {
+            outline: none;
+            border: 1px solid $submitbackground;
+        }
+    }
+    &[type="checkbox"][checked] {
+        filter: hue-rotate(165deg);
+    }
 }
 
 .error {
-    background-color: #ff0000;
+    background-color: $errorbackground;
     padding: 20px;
 }
