--- a/static/sass/specific.scss
+++ b/static/sass/specific.scss
@@ -1,3 +1,17 @@
+$detailswidth: 16rem;
+$inputheight: 2.7rem;
+
+$backgroundcolor: #232221;
+$textcolor: #E2EFF4;
+
+$internalcolor: #9E9E9E;
+$internalname: #E91E63;
+
+$timecolor: #444650;
+$namecolor: #ff5722;
+
+$systemcolor: #cddc39;
+
 @font-face {
     font-family: "Disposable Droid BB";
     src: url(ddroid.woff) format("woff"),
@@ -12,8 +26,8 @@ html {
 
 body {
     display: grid !important;
-    background-color: #232221;
-    color: #E2EFF4;
+    background-color: $backgroundcolor;
+    color: $textcolor;
     margin: 0;
     position: absolute;
     left: 0;
@@ -24,8 +38,8 @@ body {
     font-family: 'Titillium Web', sans-serif;
     font-size: 14px;
     line-height: 13px;
-    grid-template-columns: auto 16rem;
-    grid-template-rows: auto 2.7rem;
+    grid-template-columns: auto $detailswidth;
+    grid-template-rows: auto $inputheight;
     grid-template-areas:
         'chat setup'
         'input setup';
@@ -37,33 +51,32 @@ message, system, internal {
 }
 
 system {
-    color: #cddc39;
+    color: $systemcolor;
     font-weight: bold;
 
 }
 
 internal {
-    color: #9E9E9E;
+    color: $internalcolor;
+    name {
+        margin-right: 2px;
+        color: $internalname;
+    }
 }
 
 time {
     margin-right: 0.5rem;
-    color: #444650;
+    color: $timecolor;
     vertical-align: middle;
     font-size: x-small;
     font-weight: normal;
 }
 
 name {
-    color: #ff5722;
+    color: $namecolor;
     display: inline;
     margin-right: 7px;
     font-weight: bold;
-}
-
-internal name {
-    margin-right: 2px;
-    color: #E91E63;
 }
 
 h1 {
@@ -71,11 +84,12 @@ h1 {
     font-weight: normal;
 }
 
-.details, .chat, .input {
+@mixin sectiontransition {
     transition: transform 1s cubic-bezier(0.75, 0, 0.25, 1);
 }
 
 .details {
+    @include sectiontransition;
     grid-area: setup;
     background-color: #2c2a31;
     border-left: 1px solid #161418;
@@ -85,23 +99,29 @@ h1 {
     font-family: 'Disposable Droid BB', sans-serif;
     align-items: center;
     justify-content: flex-start;
-}
-
-.details *:last-child {
-    margin-top: auto;
+    *:last-child {
+        margin-top: auto;
+    }
+    form input[type="submit"] {
+        width: 100%;
+        padding: 7px;
+    }
+    &[off] { transform: translateX(100%) }
 }
 
 .chat {
+    @include sectiontransition;
     grid-area: chat;
     background-color: #13141f;
     overflow-x: hidden;
     overflow-wrap: break-word;
+    &[off] { transform: translateY(-100%) }
 }
 
 .input {
+    @include sectiontransition;
     grid-area: input;
     background-color: #151515;
-    /*border-radius: 15px;*/
     display: flex;
     justify-content: center;
     align-content: center;
@@ -109,21 +129,13 @@ h1 {
     flex-direction: row;
     padding: 7px;
     border: 5px;
+    * + * {
+        margin-left: 7px;
+    }
+    &[off] { transform: translateY(100%) }
 }
 
-.players[off] { transform: translateX(-100%) }
-.details[off]   { transform: translateX(100%) }
-.chat[off]    { transform: translateY(-100%) }
-.input[off] { transform: translateY(100%) }
-
-.input * + * {
-    margin-left: 7px;
-}
-
-.details form input[type="submit"] {
-    width: 100%;
-    padding: 7px;
-}
+//.players[off] { transform: translateX(-100%) }
 
 input[type="text"] {
     background-color: #150c09;
@@ -134,32 +146,10 @@ input[type="text"] {
     vertical-align: middle;
     flex-grow: 1;
     height: 100%;
+    &:focus {
+        outline: none;
+        border: 1px solid #ff5722;
+    }
 }
 
-input[type="text"]:focus {
-    outline: none;
-    border: 1px solid #0083ff;
-}
-
-input[type="submit"][disabled] {
-    background-color: #252525;
-    color: #828282;
-    box-shadow: inset 0px 0px 0px 3px #ababab24;
-    cursor: default;
-}
-
-input[type="submit"] {
-    background-color: #ff5722;
-    border: #222025;
-    box-shadow: inset 0px 0px 0px 3px #ffffff33;
-    color: #e5e3e7;
-    cursor: pointer;
-    font-weight: bold;
-    padding: 4px 14px;
-    transition: background-color 0.2s ease;
-}
-
-input[type="submit"]:hover:not([disabled]) {
-    background-color: #f44336;
-    border: #222025;
-}
+@import 'submits';
