--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
     <head>
         <title>{% block title %}Yet Another Mafia Redux{% endblock %}</title>
         <meta charset='utf-8'>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name='viewport' content='width=device-width, user-scalable=no'>
         <meta property='og:title' content='{% block desc %}Join other people in a game of heavily customizable mafia!{% endblock %}' />
         <meta property='og:description content='{{ self.desc() }}' />
