--- a/templates/specificgame.html
+++ b/templates/specificgame.html
@@ -3,14 +3,14 @@
 {% block js %}/specific.js{% endblock %}
 {% block css %}/specific.css{% endblock %}
 {% block body %}
-        <!--div class='players'></div-->
+        <!-- <div class='players'></div> -->
         <div class='chat'></div>
         <div class='details'>
-            <h1>Day 1</h1>
+            <h1></h1>
             <form>
                 <input type='submit' value='Player up' />
-                <input type='submit' value='Edit Game logic' />
-                <input type='submit' value='Start game' />
+                <!-- <input type='submit' value='Edit Game logic' /> -->
+                <!-- <input type='submit' value='Start game' /> -->
             </form>
         </div>
         <form class='input'>
